--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Test legacy bytecode 2.7 (smoke 30)
         run: node scripts/run-fixtures.js --root test/bytecode_2.7 --limit 30 --fail-fast
         continue-on-error: true
+      - name: Test legacy bytecode 3.0–3.5 (smoke 20)
+        run: |
+          for v in 3.0 3.1 3.2 3.3 3.4 3.5; do
+            node scripts/run-fixtures.js --root test/bytecode_${v} --limit 20 --fail-fast || true
+          done
+        continue-on-error: true
       - name: Test legacy bytecode 3.4 (smoke 30)
         run: node scripts/run-fixtures.js --root test/bytecode_3.4 --limit 30 --fail-fast
         continue-on-error: true
